fix: z-index in landing page

--- a/src/assets/css/modules/_landingPage.scss
+++ b/src/assets/css/modules/_landingPage.scss
@@ -1,4 +1,6 @@
 .landing {
+  position: relative;
+  z-index: 2;
   width: 100vw;
   height: 100vh;
   color: #fff;
